refactor: limpia comentarios y aplica clean code en el backend